--- a/stonebrick/forge/build.gradle
+++ b/stonebrick/forge/build.gradle
@@ -58,3 +58,8 @@ processResources
         exclude 'mcmod.info'
     }
 }
+
+jar 
+{
+    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+}
