Start Refactor Furnace Wrapping
Begin new furnace api wrapping system

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ stonebrick/forge/config/
 stonebrick/forge/logs/
 stonebrick/forge/saves/
 stonebrick/forge/usernamecache.json
+stonebrick/forge/options.txt
