--- a/furnace/build.gradle
+++ b/furnace/build.gradle
@@ -13,4 +13,5 @@ dependencies
 	testCompile 'junit:junit:4.11'
 	compile 'org.mozilla:rhino:1.7.6'
 	compile 'com.google.guava:guava:18.0'
+	compile 'org.apache.commons:commons-lang3:3.4'
 }
